# sheaf-py

./: .gitignore  README.md  jsonl_to_json.sh  pyproject.toml
src/sheaf/: __main__.py
src/sheaf/template/: program.py  prompts.py  pyproject.toml  tools.py
src/sheaf/template/_lib/: core.py  journal.py  misc.py  runner.py  shel.py  suspend.py  toolgen.py
src/sheaf/template/_lib/core/: __init__.py  base.py  layer_wiring.py  tool_executor.py
src/sheaf/template/utils/: logger.py  stdblock.py  tidgets.py
